Contrast fix
Forgot one element

--- a/styling.css
+++ b/styling.css
@@ -35,7 +35,7 @@ header {
     border-radius: 2%;
     border-width: 2px;
     border-color: black;
-    background-color: rgb(136, 20, 20);
+    background-color: rgb(254, 48, 48);
     border: solid;
 }
 
